# Design-Load-Balancer

./: .gitignore  CMakeLists.txt  README.md  instructions.txt
examples/: backend_server.cpp  client.cpp
include/admin/: admin_service.hpp
include/api/: admin_service.hpp  crow_service.hpp
include/core/: load_balancer.hpp  server.hpp  server_manager.hpp
include/core/process/: linux_process.hpp  process.hpp  process_factory.hpp  windows_process.hpp
include/monitoring/: health_checker.hpp
include/strategies/: least_connections.hpp  resource_based.hpp  round_robin.hpp  strategy.hpp
include/utils/: config.hpp  helper.hpp
proto/: admin_service.grpc.pb.cc  admin_service.grpc.pb.h  admin_service.pb.cc  admin_service.pb.h  admin_service.proto  load_balancer.grpc.pb.cc  load_balancer.grpc.pb.h  load_balancer.pb.cc  load_balancer.pb.h  load_balancer.proto
proto/proto/: admin_service.pb.cc  admin_service.pb.h  load_balancer.pb.cc  load_balancer.pb.h
src/: main.cpp
src/admin/: admin_service.cpp
src/api/: admin_service.cpp  crow_service.cpp
src/core/: load_balancer.cpp  server.cpp  server_manager.cpp
src/core/process/: linux_process.cpp  process_factory.cpp  windows_process.cpp
src/monitoring/: health_checker.cpp
src/strategies/: least_connections.cpp  resource_based.cpp  round_robin.cpp
src/utils/: config.cpp
